force-app/main/default/objects/Organization__c/Organization__c.object-meta.xml
<CustomObject>
    <description>This record type represents organizations associated with the Newport Art Museum. Organizations are related to individuals that belong to them, as well as gifts that are made by them.</description>
    <label>Organization</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>