force-app/main/default/objects/Organization__c/fields/Custom_Address__c.field-meta.xml
<CustomField>
    <fullName>Custom_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds a custom address for this particular organization.</description>
    <label>Custom Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>