force-app/main/default/objects/Organization__c/fields/RE_ID__c.field-meta.xml
<CustomField>
    <fullName>RE_ID__c</fullName>
    <description>This field stores the original Raiser's Edge ID that relates this record to the legacy Raiser's Edge Database.</description>
    <externalId>true</externalId>
    <label>Raiser's Edge ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>