force-app/main/default/objects/Organization__c/fields/Solicit_Codes__c.field-meta.xml
<CustomField>
    <fullName>Solicit_Codes__c</fullName>
    <description>This field assigns organizational solicit codes to this organization.</description>
    <label>Solicit Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization_Solicit_Codes</valueSetName>
    </valueSet>
</CustomField>